--- a/style.css
+++ b/style.css
@@ -138,3 +138,8 @@ text-align: center;
   margin: 0 auto 1rem;
 }
 
+#backFromQR {
+  background: var(--color-blanco);  
+  color: var(--color-oscuro);       
+  margin-bottom: 2rem;
+}
