--- a/style.css
+++ b/style.css
@@ -143,3 +143,34 @@ text-align: center;
   color: var(--color-oscuro);       
   margin-bottom: 2rem;
 }
+
+
+@media screen and (min-height: 1600px) {
+  .screen {
+    justify-content: center;
+  }
+
+  button {
+    max-width: 500px;
+    font-size: 2.5rem;     /* Antes: 2rem */
+    padding: 2.5rem 0;     /* Más grande */
+  }
+
+  #logo {
+    width: 380px;          /* Un toque más grande */
+  }
+
+  h1, h2 {
+    font-size: 3rem;       /* Títulos más grandes */
+    margin-bottom: 2rem;
+  }
+
+  #agendaImage, #qrImage {
+    max-height: 70vh;
+  }
+}
+
+
+html {
+  font-size: 20px;  /* Por defecto suele estar en 16px */
+}
